[package]
name = "inochi2d-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
console_error_panic_hook = "0.1.7"
inox2d = { version = "0.1.0", default-features = false }
log = "0.4.19"
reqwest = "0.11.18"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["Window", "Location", "Navigator"] }
